/*
 * This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at https://mozilla.org/MPL/2.0/.
 *
 * Copyright (c) 2023-present, Ukama Inc.
 */

syntax="proto3";

option go_package = "github.com/ukama/ukama/systems/notification/notify/pb/gen";

import "validator.proto";
import "google/protobuf/timestamp.proto";
package ukama.notification.notify.v1;


service NotifyService {
    rpc Add(AddRequest) returns (AddResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc List(ListRequest) returns (ListResponse);
    rpc Delete(GetRequest) returns (DeleteResponse);
    rpc Purge(PurgeRequest) returns (ListResponse);
}

message AddRequest {
    string nodeId = 1 [json_name = "node_id"];
    string severity = 2;
    string type = 3;
    string serviceName = 4 [json_name = "service_name"];
    uint32 status = 5;
    uint32 time = 6 [json_name = "time"];
    bytes details = 7;
}

message AddResponse {}


message GetRequest {
    string notificationId = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "notification_id"];
}

message GetResponse {
    Notification notification = 1;
}

message ListRequest {
    string nodeId = 1 [json_name = "node_id"];
    string serviceName = 2 [json_name = "service_name"];
    string type = 3;
    uint32 count = 4;
    bool sort = 5;
}

message ListResponse {
    repeated Notification notifications = 1;
}


message DeleteResponse {
}


message PurgeRequest {
    string nodeId = 1 [json_name = "node_id"];
    string serviceName = 2 [json_name = "service_name"];
    string type = 3;
}

message Notification {
    string id = 1 [(validator.field) = {uuid_ver: 4, string_not_empty: true}, json_name = "id"];
    string nodeId = 2 [json_name = "node_id"];
    string nodeType = 3 [json_name = "node_type"];;
    string severity = 4;
    string type = 5;
    string serviceName = 6 [json_name = "service_name"];
    uint32 status = 7;
    uint32 time = 8 [json_name = "time"];
    bytes details = 9;
    google.protobuf.Timestamp createdAt = 10 [json_name = "created_at"];
}